# iot_wifi_system

./: .gitignore  CMakeLists.txt  README.md  iot.txt  package.xml  ros-melodic-iot-wifi-system_0.0.0-0bionic_amd64.deb
code/: device_config.ini  iot_control.py  robot_iot.py  setup.py
include/: mqtt_arv.h
launch/: castlex_iot.launch  castlex_iot_device.launch  castlex_iot_device_python.launch
params/: device_config.ini
scripts/: robot_iot.py
src/: castlex_iot(复件).cpp  castlex_iot.cpp  iot_arv.cpp  mqtt_arv.cpp
